fixed footer alignment issues and adding padding to header

--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ the remaining part of the pg will be hidden*/
 
 
 header, main, footer {
-	min-width: 855px; 
+	min-width: 855px;
+
 	}
 
 header .container, main .container {
@@ -20,10 +21,15 @@ header .container, main .container {
 
 }
 
+header .container {
+	padding-top: 15px;
+	height: 40px; 
+}
+
 header {
 	background: white;
 	overflow: auto;
-	/*height: 40px;*/
+	height: 60px;
 }
 
 h1 {
@@ -44,6 +50,7 @@ header nav {
 main {
 	background: white;
 	height: 510px;
+	padding-top: 30px;
 
 	
 }
@@ -71,6 +78,10 @@ main .right {
 
 footer {
 	overflow: auto;
+	height: 80px;
+	max-width: 855px;
+	margin: auto;
+
 }
 
 
@@ -82,6 +93,11 @@ h4 {
 footer .container {
 	height: 176px;
 	width: 1000px;
+	clear: right;
+	overflow: auto;
+	position: fixed;
+
+
 }
 
 
@@ -90,13 +106,15 @@ footer .left {
 	float: left;
 	width: 570px;
 	height: 176px;
-
+	position: absolute;
 }
 
 footer .right {
 	float: right;
 	width: 285px;
 	height: 176px;
+
+
 }
 
 footer .smleft {
@@ -116,8 +134,10 @@ footer .smright {
 }
 
 footer .sitemap {
+	width: 285px;
 	height: 176px;
-    margin-left: 350px;
+
+
 
 }
 
